feat(file-service): 完善文件上传流程及列表管理功能，修复魔数校验问题